--- a/src/app/styles/colors.less
+++ b/src/app/styles/colors.less
@@ -4,3 +4,5 @@
 @border: #EFEFEF;
 @white: #ffffff;
 @orange: linear-gradient(121.69deg, #FF8008 -0.63%, #FFC837 99.37%);
+@black: #000000;
+@blue: #1CA0EB;
