--- a/src/styles.less
+++ b/src/styles.less
@@ -1,6 +1,9 @@
 @import "../node_modules/ng-zorro-antd/ng-zorro-antd.less";
 
+.ant-drawer-body{
+    padding: 16px;
+}
 
-h1 {
+h1,h2,h3,h4,h5,p {
     margin: 0;
 }
