--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -50,11 +50,41 @@
         </div>
     </div>
 </div>
-
-<nz-drawer [nzClosable]="false" [nzVisible]="visible" nzPlacement="right" nzTitle="Basic Drawer" (nzOnClose)="close()">
+<nz-drawer [nzWidth]="425" [nzClosable]="false" [nzVisible]="visible" nzPlacement="right" (nzOnClose)="close()">
     <ng-container *nzDrawerContent>
-        <p>Some contents...</p>
-        <p>Some contents...</p>
-        <p>Some contents...</p>
+        <div nz-row [nzGutter]="[0,50]">
+            <div nz-col nzSpan="24">
+                <div nz-row nzJustify="space-between" nzAlign="middle">
+                    <svg nz-col width="19" height="18" viewBox="0 0 19 18" fill="none" (click)="close()" class="drawer__icon">
+                        <path d="M17.501 0.830811L1.50098 16.6617" stroke="#1C2541" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M17.501 16.6617L1.50098 0.830811" stroke="#1C2541" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>  
+                    <div nz-col>
+                        <p class="drawer__title">Категории</p>
+                    </div>
+                    <div nz-col>
+                        <p class="drawer__clear">Сбросить</p>
+                    </div>
+                </div>
+            </div>
+            <div nz-col nzSpan="24">
+                <div nz-row [nzGutter]="[0,16]">
+                    <div nz-col nzSpan="24" *ngFor="let catalog of catalogs" class="catalog">
+                        <div class="catalog__card">
+                            <div nz-row [nzGutter]="8" nzAlign="middle">
+                                <div nz-col>
+                                    <div class="catalog__img">
+                                        <img [src]="catalog.img">
+                                    </div>                             
+                                </div>
+                                <div nz-col>
+                                    <p class="catalog__title">{{catalog.title}}</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </ng-container>
 </nz-drawer>
