--- a/src/app/components/header/header.component.less
+++ b/src/app/components/header/header.component.less
@@ -157,3 +157,45 @@
         }
     }
 }
+
+.drawer{
+    &__icon{
+        cursor: pointer;
+    }
+
+    &__title{
+        .text(800,20px,27px,@textBlack);
+    }
+
+    &__clear{
+        text-decoration: underline;
+        .text(400,16px,24px,@blue);
+        cursor: pointer;
+    }
+}
+
+.catalog{
+    cursor: pointer;
+
+    &__card{
+        padding: 16px;
+        border: 1px solid #485470;
+        border-radius: 8px;
+    }
+
+    &__img{
+        width: 36px;
+        height: 36px;
+        
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
+    &__title{
+        max-width: 180px;
+        .text(700,16px,20px,@textBlack);
+    }
+}
