--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <header>
-    <app-header></app-header>
+    <sili-header></sili-header>
 </header>
 <main>
     <router-outlet></router-outlet>
 </main>
 <footer class="footer">
-    <app-footer></app-footer>
+    <sili-footer></sili-footer>
 </footer>
