--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<div class="home__wrapper">
+    <div nz-row>
+        <div nz-col nzSpan="24">
+            <sili-brands></sili-brands>
+        </div>
+    </div>
+</div>
