--- a/src/styles.less
+++ b/src/styles.less
@@ -1,4 +1,9 @@
 @import "../node_modules/ng-zorro-antd/ng-zorro-antd.less";
+@import 'https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap';
+
+*{
+    font-family: 'Manrope', sans-serif;
+}
 
 .ant-drawer-body{
     padding: 16px;
@@ -6,4 +11,13 @@
 
 h1,h2,h3,h4,h5,p {
     margin: 0;
+}
+
+.container{
+    max-width: 1170px;
+    margin: 0 auto;
+}
+
+.ant-card-body{
+    padding: 0;
 }
