--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,5 +1,8 @@
 <div class="home__wrapper">
-    <div nz-row>
+    <div nz-row [nzGutter]="[0,120]">
+        <div nz-col nzSpan="24">
+            <sili-categories></sili-categories>
+        </div>
         <div nz-col nzSpan="24">
             <sili-brands></sili-brands>
         </div>
