--- a/src/app/styles/colors.less
+++ b/src/app/styles/colors.less
@@ -2,7 +2,12 @@
 @textBlack: #1C2541;
 @burger: #757575;
 @border: #EFEFEF;
+@cardBorder: rgba(117, 117, 117, 0.5);
+@categoryBorder: rgba(242, 242, 242, 0.5);
 @white: #ffffff;
 @orange: linear-gradient(121.69deg, #FF8008 -0.63%, #FFC837 99.37%);
 @black: #000000;
 @blue: #1CA0EB;
+@cardInfo: #485470;
+@background: rgba(217, 224, 236, 0.2);
+@purple: #B8A4FD;
