--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,8 +3,8 @@
         <div nz-row nzAlign="bottom" [nzGutter]="{xl:24,lg:20,md:20,sm:16,xs:16}">
             <div nz-col>
                 <div nz-row nzAlign="bottom" [nzGutter]="[{xl:16,lg:8,md:8,sm:8,xs:8}]" class="header__logo">
-                    <div nz-col class="header__logo-block">
-                        <svg width="45" height="45" viewBox="0 0 45 49" fill="none" class="header__logo-icon">
+                    <div nz-col class="logo__container">
+                        <svg width="45" height="45" viewBox="0 0 45 49" fill="none" class="logo__icon">
                             <path d="M18.4919 37.5698C28.7047 37.5698 36.9838 29.2715 36.9838 19.0349C36.9838 8.79836 28.7047 0.5 18.4919 0.5C15.2095 0.5 12.1268 1.35722 9.45455 2.8605L12.0856 12.6858C13.3189 11.4475 14.884 10.5081 16.6914 10.0226C18.4989 9.53721 20.323 9.56645 22.0088 10.0207C25.4346 10.9439 28.2894 13.6223 29.2736 17.3038L31.2678 24.7636C31.6349 26.1369 30.8218 27.5484 29.4517 27.9164C28.0816 28.2844 26.6733 27.4694 26.3062 26.0961L24.312 18.6364C23.5777 15.8898 20.7611 14.2598 18.0209 14.9958C15.2807 15.7317 13.6545 18.5549 14.3888 21.3015L16.3829 28.7612C16.7501 30.1345 15.937 31.5461 14.5669 31.9141C13.1968 32.282 11.7885 31.4671 11.4213 30.0938L5.05957 6.29612C1.92336 9.61732 0 14.101 0 19.0349C0 29.2715 8.2791 37.5698 18.4919 37.5698Z" fill="url(#paint0_linear_256_2835)"/>
                             <path d="M42.8635 29.6908C44.2163 30.2945 44.8352 31.8904 44.1137 33.1867C42.4202 36.2293 40.205 38.9576 37.5633 41.2432C34.2435 44.1155 30.332 46.2177 26.108 47.3998C21.8841 48.5819 17.4519 48.8147 13.1278 48.0816C9.68687 47.4983 6.38197 46.3148 3.3609 44.5915C2.07386 43.8574 1.77838 42.1709 2.62352 40.9521C3.46866 39.7333 5.13379 39.4465 6.43505 40.155C8.7969 41.441 11.3599 42.3304 14.0221 42.7818C17.5678 43.3829 21.2023 43.192 24.6659 42.2226C28.1295 41.2533 31.337 39.5295 34.0592 37.1743C36.1031 35.4059 37.8357 33.3143 39.1913 30.988C39.9382 29.7063 41.5107 29.087 42.8635 29.6908Z" fill="url(#paint1_linear_256_2835)"/>
                             <defs>
@@ -21,7 +21,7 @@
                         </svg>
                     </div>
                     <div nz-col>
-                        <h1 class="header__logo-text">hayhay</h1>
+                        <h1 class="logo__text">hayhay</h1>
                     </div>
                 </div>
             </div>
@@ -69,16 +69,16 @@
             </div>
             <div nz-col nzSpan="24">
                 <div nz-row [nzGutter]="[0,16]">
-                    <div nz-col nzSpan="24" *ngFor="let catalog of catalogs" class="catalog">
+                    <div nz-col nzSpan="24" *ngFor="let category of categories" class="catalog">
                         <div class="catalog__card">
                             <div nz-row [nzGutter]="8" nzAlign="middle">
                                 <div nz-col>
                                     <div class="catalog__img">
-                                        <img [src]="catalog.img">
+                                        <img [src]="category.img">
                                     </div>                             
                                 </div>
                                 <div nz-col>
-                                    <p class="catalog__title">{{catalog.title}}</p>
+                                    <p class="catalog__title">{{category.title}}</p>
                                 </div>
                             </div>
                         </div>
