--- a/src/app/components/header/header.component.less
+++ b/src/app/components/header/header.component.less
@@ -17,43 +17,6 @@
 
     &__logo {
         cursor: pointer;
-
-        &-block {
-            max-height: 45px;
-
-            @media (max-width: 991px) {
-                max-height: 38px;
-            }
-
-            @media (max-width: 767px) {
-                max-height: 32px;
-            }
-        }
-
-        &-icon {
-            @media (max-width: 991px) {
-                width: 36px;
-                height: 38px;
-            }
-
-            @media (max-width: 767px) {
-                width: 28px;
-                height: 32px;
-            }
-        }
-
-        &-text {
-            user-select: none;
-            .text(700, 40px, 51px, @textBlack);
-
-            @media (max-width: 991px) {
-                .text(700, 28px, 36px, @textBlack);
-            }
-
-            @media (max-width: 767px) {
-                .text(700, 20px, 26px, @textBlack);
-            }
-        }
     }
 
     &__input {
@@ -149,6 +112,45 @@
             @media (max-width: 991px) {
                 font-size: 14px;
             }
+        }
+    }
+}
+
+.logo{
+    &__container {
+        max-height: 45px;
+
+        @media (max-width: 991px) {
+            max-height: 38px;
+        }
+
+        @media (max-width: 767px) {
+            max-height: 32px;
+        }
+    }
+
+    &__icon {
+        @media (max-width: 991px) {
+            width: 36px;
+            height: 38px;
+        }
+
+        @media (max-width: 767px) {
+            width: 28px;
+            height: 32px;
+        }
+    }
+
+    &__text {
+        user-select: none;
+        .text(700, 40px, 51px, @textBlack);
+
+        @media (max-width: 991px) {
+            .text(700, 28px, 36px, @textBlack);
+        }
+
+        @media (max-width: 767px) {
+            .text(700, 20px, 26px, @textBlack);
         }
     }
 }
