--- a/src/app/modules/home/brands/brands.component.less
+++ b/src/app/modules/home/brands/brands.component.less
@@ -2,29 +2,37 @@
 @import '../../../styles/text.less';
 
 .brands{
-    &__title{
-        .text(600,36px,49px,@textBlack);
-    }
-
     &__card{
-        border: 1px solid rgba(117, 117, 117, 0.5);
+        max-height: 115px;
+        border: 1px solid @cardBorder;
         border-radius: 12px;
         overflow: hidden;
         cursor: pointer;
+    }
+}
 
-        &-img{
-            width: 120px;
+
+.card{
+    &__img{
+        width: 120px;
+        min-height: 100%;
+
+        img{
+            width: 100%;
             height: 100%;
+            object-fit: fill;
+        }
+    }
+    
+    &__content{
+        padding: 24px 22px 16px 0;
+    }
 
-            img{
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-            }
-        }
-        
-        &-content{
-            padding: 24px 22px 16px 0;
-        }
+    &__title{
+        .text(700,32px,41px,@textBlack);
+    }
+
+    &__info{
+        .text(600,14px,18px,@cardInfo);
     }
 }
