--- a/src/styles.less
+++ b/src/styles.less
@@ -1,5 +1,8 @@
 @import "../node_modules/ng-zorro-antd/ng-zorro-antd.less";
 @import 'https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap';
+@import 'swiper/less';
+@import 'swiper/less/navigation';
+@import 'swiper/less/pagination';
 
 *{
     font-family: 'Manrope', sans-serif;
