--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -6,5 +6,8 @@
         <div nz-col nzSpan="24">
             <sili-brands></sili-brands>
         </div>
+        <div nz-col nzSpan="24">
+            <sili-products></sili-products>
+        </div>
     </div>
 </div>
