--- a/src/app/shared/product/product.component.html
+++ b/src/app/shared/product/product.component.html
@@ -1,1 +1,35 @@
-<p>product works!</p>
+<div class="product">
+    <div nz-row [nzGutter]="[0,8]">
+        <div nz-col nzSpan="24">
+            <div class="product__img">
+                <img nz-image nzDisablePreview [nzSrc]="product.img"  [nzFallback]="fallback" [alt]="product.title">
+            </div>
+        </div>
+        <div nz-col nzSpan="24">
+            <h1 nz-typography nzEllipsis [nzEllipsisRows]="2" class="product__title">{{product.title}}</h1>
+        </div>
+        <div nz-col nzSpan="24">
+            <div nz-row [nzGutter]="8" nzAlign="bottom">
+                <div nz-col>
+                    <nz-rate [ngModel]="0"></nz-rate>
+                </div>
+                <div nz-col>
+                    <span class="product__review">(14)</span>
+                </div>
+            </div>     
+        </div>
+        <div nz-col nzSpan="24">
+            <div nz-row [nzGutter]="[0,16]">
+                <div nz-col nzSpan="24">
+                    <h2 class="product__info">{{product.amount}} шт</h2>
+                </div>
+                <div nz-col nzSpan="24">
+                    <button nz-button [nzType]="'primary'" class="product__button">
+                        100.000 сум / мес              
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
