--- a/src/app/styles/colors.less
+++ b/src/app/styles/colors.less
@@ -13,3 +13,5 @@
 @purple: #B8A4FD;
 @price: #202020;
 @orangeButton: #F7971E;
+@green: #36F599;
+@loadShadow: drop-shadow(0px 0px 24px rgba(253, 230, 63, 0.4));
