--- a/src/app/modules/home/products/products.component.html
+++ b/src/app/modules/home/products/products.component.html
@@ -7,11 +7,38 @@
                         <sili-title [title]="title"></sili-title>
                     </div>
                     <div nz-col nzSpan="24">
-                        <div nz-row [nzGutter]="[30,30]">
-                            <div nz-col nzSpan="6" *ngFor="let product of products">
-                                <sili-product [product]="product"></sili-product>
+                        <nz-list nzGrid>
+                            <div nz-row [nzGutter]="[30,30]">
+                                <ng-container *ngIf="!loading">
+                                    <div nz-col nzSpan="6" *ngFor="let product of products">
+                                        <nz-list-item>
+                                            <sili-product [product]="product"></sili-product>                         
+                                        </nz-list-item>
+                                    </div>
+                                </ng-container>                    
+                                <ng-container *ngIf="loading">
+                                    <div nz-col nzSpan="6" *ngFor="let card of skeleton">
+                                        <div nz-row [nzGutter]="[0,8]" class="skeleton__card">
+                                            <div nz-col nzSpan="24">
+                                                <div class="skeleton__img">
+                                                    <nz-skeleton-element nz-row [nzActive]="true" nzType="button" [nzSize]="'default'"></nz-skeleton-element>  
+                                                </div>
+                                            </div>
+                                            <div nz-col nzSpan="24">
+                                                <nz-skeleton [nzLoading]="true"></nz-skeleton> 
+                                            </div>
+                                        </div>
+                                    </div>   
+                                </ng-container>                                                                      
                             </div>
-                        </div>
+                            <div nz-row nzJustify="center">
+                                <div nz-col>
+                                    <div nz-list-load-more>
+                                        <button nz-button class="load">Показать все</button>
+                                    </div>
+                                </div>
+                            </div>                    
+                        </nz-list>                    
                     </div>
                 </div>
             </div>
