--- a/src/app/shared/product/product.component.html
+++ b/src/app/shared/product/product.component.html
@@ -11,21 +11,21 @@
         <div nz-col nzSpan="24">
             <div nz-row [nzGutter]="8" nzAlign="bottom">
                 <div nz-col>
-                    <nz-rate [ngModel]="0"></nz-rate>
+                    <nz-rate [ngModel]="product.rate" [nzDisabled]="true"></nz-rate>
                 </div>
                 <div nz-col>
-                    <span class="product__review">(14)</span>
+                    <span class="product__review">({{product.amount}})</span>
                 </div>
             </div>     
         </div>
         <div nz-col nzSpan="24">
             <div nz-row [nzGutter]="[0,16]">
                 <div nz-col nzSpan="24">
-                    <h2 class="product__info">{{product.amount}} шт</h2>
+                    <h2 class="product__info">{{product.price}}</h2>
                 </div>
                 <div nz-col nzSpan="24">
                     <button nz-button [nzType]="'primary'" class="product__button">
-                        100.000 сум / мес              
+                        {{product.credit}}           
                     </button>
                 </div>
             </div>
