--- a/src/styles.less
+++ b/src/styles.less
@@ -29,3 +29,15 @@ h1,h2,h3,h4,h5,p {
     font-size: 16px;
     color: #B8A4FD;
 }
+
+
+.ant-skeleton-element{
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.ant-skeleton-element .ant-skeleton-button{
+    width: 100%;
+    height: 100%;
+}
