--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -78,7 +78,7 @@
                                     </div>                             
                                 </div>
                                 <div nz-col>
-                                    <p class="catalog__title">{{category.title}}</p>
+                                    <p nz-typography nzEllipsis [nzEllipsisRows]="2" class="catalog__title">{{category.title}}</p>
                                 </div>
                             </div>
                         </div>
