--- a/src/app/components/header/header.component.less
+++ b/src/app/components/header/header.component.less
@@ -190,6 +190,8 @@
     &__img{
         width: 36px;
         height: 36px;
+        border-radius: 8px;
+        overflow: hidden;
         
         img{
             width: 100%;
