--- a/src/app/modules/home/brands/brands.component.less
+++ b/src/app/modules/home/brands/brands.component.less
@@ -15,6 +15,7 @@
 .card{
     &__img{
         width: 120px;
+        height: 100%;
         min-height: 100%;
 
         img{
@@ -35,4 +36,10 @@
     &__info{
         .text(600,14px,18px,@cardInfo);
     }
+}
+
+.skeleton{
+    height: 115px;
+    border-radius: 12px;
+    overflow: hidden;
 }
